Arreglado para enviar